created first layout iteration for the search page

--- a/Sparkfly.Main/Sparkfly.Main.csproj
+++ b/Sparkfly.Main/Sparkfly.Main.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MudBlazor" Version="6.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
